@@ -9,6 +9,10 @@ int main (void)
   
   tz = CFTimeZoneCreateWithName (NULL, CFSTR("America/Chicago"), true);
   PASS(tz != NULL, "CFTimeZone create successfully.");
+  PASS_CFEQ(CFTimeZoneGetName(tz), CFSTR("America/Chicago"),
+    "CFTimeZone has correct name.");
+  
+  CFRelease(tz);
   
   return 0;
 }
