@@ -1,7 +1,13 @@
+2011-07-15 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFTimeZone.c: Complete CFTimeZoneCreateWithName().
+	* Source/CFString.c: Fix a few bugs.
+	* Source/CFStringUtilities.c: Fix compare bug.
+
 2011-07-15 10:57  David Chisnall <theraven@gna.org>
 
 	* libs/corebase/trunk/Source/CFBundle.m,
-	  libs/corebase/trunk/Source/GNUmakefile: Define RTLD_DEFAULT on
+	* libs/corebase/trunk/Source/GNUmakefile: Define RTLD_DEFAULT on
 	  systems where it isn't defined (stupid glibc headers).
 	  Remove -luuid, since it seems not to be required anymore.
 
